--- a/src/App.css
+++ b/src/App.css
@@ -54,3 +54,15 @@ nav h1{
   border-top:0.1875rem solid var(--primary-orange);
 
 }
+
+/****************** HEADER ***************************/
+
+.header-wrapper{
+  position:relative;
+  background:url('https://images.unsplash.com/photo-1517694712202-14dd9538aa97?auto=format&fit=crop&q=60&w=1000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8Y29tcHV0ZXJ8ZW58MHx8MHx8fDA%3D')no-repeat;
+  background-size:cover;
+  background-position:center;
+  object-fit: cover;
+  height:90vh;
+
+}
