--- a/src/App.css
+++ b/src/App.css
@@ -80,3 +80,16 @@ nav h1{
   text-transform:uppercase;
   
 }
+.ityped-cursor{
+  animation: blink 1s infinite;
+
+}
+@keyframes blink {
+  50%{
+    opacity:1;
+  }
+  100%{
+    opacity:0;
+  }
+  
+}
